C++ Project/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:06:01 **** Rebuild of configuration Debug for project CaseStudy1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o caseStudy1.o "..\\caseStudy1.cpp" 
g++ -o CaseStudy1.exe caseStudy1.o 
15:06:03 **** Rebuild of configuration Debug for project test ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\test.o" "..\\src\\test.cpp" 
g++ -o test.exe "src\\test.o" 
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy1
15:10:49 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\test.o" "..\\src\\test.cpp" 
g++ -o test.exe "src\\test.o" 
Info: Nothing to build for CaseStudy1
15:25:06 **** Incremental Build of configuration Debug for project CaseStudy1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o no2.o "..\\no2.cpp" 
..\no2.cpp:11:27: warning: missing terminating " character [enabled by default]
   cout << "Case #<<i++<<"."<<c<<endl;
                           ^
..\no2.cpp:11:3: error: missing terminating " character
   cout << "Case #<<i++<<"."<<c<<endl;
   ^
..\no2.cpp: In function 'int main()':
..\no2.cpp:12:3: error: request for member 'cin' in '"Case #<<i++<<"', which is of non-class type 'const char [14]'
   cin>>n
   ^
..\no2.cpp:13:2: error: expected ';' before '}' token
  }
  ^
..\no2.cpp:6:7: warning: unused variable 'i' [-Wunused-variable]
   int i =1;
       ^
15:29:59 **** Incremental Build of configuration Debug for project CaseStudy1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o no2.o "..\\no2.cpp" 
g++ -o CaseStudy1.exe no2.o caseStudy1.o 
caseStudy1.o: In function `main':
C:\My Files\AFRIZAL\CaseStudy1\Debug/../caseStudy1.cpp:4: multiple definition of `main'
no2.o:C:\My Files\C++ Project\CaseStudy1\Debug/../no2.cpp:4: first defined here
collect2.exe: error: ld returned 1 exit status
15:29:59 **** Rebuild of configuration Debug for project CaseStudy2 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o caseStudy2.o "..\\caseStudy2.cpp" 
g++ -o CaseStudy2.exe caseStudy2.o 
Info: Nothing to build for CaseStudy2
Info: Nothing to build for CaseStudy2
15:58:25 **** Incremental Build of configuration Debug for project CaseStudy1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o caseStudy1.o "..\\caseStudy1.cpp" 
g++ -o CaseStudy1.exe caseStudy1.o no2.o 
no2.o: In function `main':
C:\My Files\C++ Project\CaseStudy1\Debug/../no2.cpp:4: multiple definition of `main'
caseStudy1.o:C:\My Files\C-Project\C++ Project\CaseStudy1\Debug/../caseStudy1.cpp:4: first defined here
collect2.exe: error: ld returned 1 exit status
Info: Nothing to build for CaseStudy2
15:58:36 **** Incremental Build of configuration Debug for project CaseStudy1 ****
Info: Internal Builder is used for build
g++ -o CaseStudy1.exe caseStudy1.o 
Info: Nothing to build for CaseStudy2
15:58:52 **** Incremental Build of configuration Debug for project CaseStudy1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o caseStudy1.o "..\\caseStudy1.cpp" 
g++ -o CaseStudy1.exe caseStudy1.o 
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy2
16:34:46 **** Rebuild of configuration Debug for project Problem_UVA_Wedding_shopping ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o wedding.o "..\\wedding.cpp" 
..\wedding.cpp:2:20: fatal error: csstudio: No such file or directory
 #include <csstudio>
                    ^
compilation terminated.
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy2
16:35:27 **** Incremental Build of configuration Debug for project Problem_UVA_Wedding_shopping ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o wedding.o "..\\wedding.cpp" 
..\wedding.cpp:2:19: fatal error: cstudio: No such file or directory
 #include <cstudio>
                   ^
compilation terminated.
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy2
16:35:40 **** Incremental Build of configuration Debug for project Problem_UVA_Wedding_shopping ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o wedding.o "..\\wedding.cpp" 
..\wedding.cpp:2:19: fatal error: cstudio: No such file or directory
 #include <cstudio>
                   ^
compilation terminated.
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy2
16:36:03 **** Incremental Build of configuration Debug for project Problem_UVA_Wedding_shopping ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o wedding.o "..\\wedding.cpp" 
..\wedding.cpp:3:20: fatal error: csstring: No such file or directory
 #include <csstring>
                    ^
compilation terminated.
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy2
16:36:20 **** Incremental Build of configuration Debug for project Problem_UVA_Wedding_shopping ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o wedding.o "..\\wedding.cpp" 
..\wedding.cpp:38:17: error: invalid suffix "M" on integer constant
   scanf("%d %d",8M,8C);
                 ^
..\wedding.cpp:38:20: error: invalid suffix "C" on integer constant
   scanf("%d %d",8M,8C);
                    ^
..\wedding.cpp: In function 'int shop(int, int)':
..\wedding.cpp:30:12: error: a function-definition is not allowed here before '{' token
 int main() {
            ^
..\wedding.cpp:50:1: error: expected '}' at end of input
 }
 ^
..\wedding.cpp:50:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy2
16:37:53 **** Incremental Build of configuration Debug for project Problem_UVA_Wedding_shopping ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o wedding.o "..\\wedding.cpp" 
..\wedding.cpp:38:17: error: invalid suffix "M" on integer constant
   scanf("%d %d",8M,8C);
                 ^
..\wedding.cpp:38:20: error: invalid suffix "C" on integer constant
   scanf("%d %d",8M,8C);
                    ^
..\wedding.cpp: In function 'int main()':
..\wedding.cpp:33:14: error: no matching function for call to 'flush(FILE*)'
  flush(stdout);
              ^
..\wedding.cpp:33:14: note: candidate is:
In file included from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\istream:39:0,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\sstream:38,
                 from ..\wedding.cpp:4:
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\ostream:586:5: note: template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::flush(std::basic_ostream<_CharT, _Traits>&)
     flush(basic_ostream<_CharT, _Traits>& __os)
     ^
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\ostream:586:5: note:   template argument deduction/substitution failed:
..\wedding.cpp:33:14: note:   mismatched types 'std::basic_ostream<_CharT, _Traits>' and 'FILE* {aka _iobuf*}'
  flush(stdout);
              ^
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy2
16:38:38 **** Incremental Build of configuration Debug for project Problem_UVA_Wedding_shopping ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o wedding.o "..\\wedding.cpp" 
..\wedding.cpp:38:18: error: invalid suffix "M" on integer constant
   scanf("%d %d", 8M, 8C);
                  ^
..\wedding.cpp:38:22: error: invalid suffix "C" on integer constant
   scanf("%d %d", 8M, 8C);
                      ^
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy2
16:38:56 **** Incremental Build of configuration Debug for project Problem_UVA_Wedding_shopping ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o wedding.o "..\\wedding.cpp" 
..\wedding.cpp:37:18: error: invalid suffix "M" on integer constant
   scanf("%d %d", 8M, 8C);
                  ^
..\wedding.cpp:37:22: error: invalid suffix "C" on integer constant
   scanf("%d %d", 8M, 8C);
                      ^
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy2
16:39:28 **** Incremental Build of configuration Debug for project Problem_UVA_Wedding_shopping ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o wedding.o "..\\wedding.cpp" 
g++ -o Problem_UVA_Wedding_shopping.exe wedding.o 
Info: Nothing to build for Problem_UVA_Wedding_shopping
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy2
Info: Nothing to build for Problem_UVA_Wedding_shopping
Info: Nothing to build for Problem_UVA_Wedding_shopping
